--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   
     <div class="container">
       <div class="calculator-container">
-        <div class="screen"></div>
+        <div class="screen">
+          <output class="user-input" type="text">0</output>
+          <output class="output" type="text"></output>
+        </div>
         <div class="first-row">
           <button class="ac-button">AC</button>
           <button class="c-button">C</button>
@@ -25,29 +28,29 @@
         </div>
 
         <div class="row">
-          <button>7</button>
-          <button>8</button>
-          <button>9</button>
+          <button class="7-button">7</button>
+          <button class="8-button">8</button>
+          <button class="9-button">9</button>
           <button class="plus-button">+</button>
         </div>
 
         <div class="row">
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
+          <button class="4-button">4</button>
+          <button class="5-button">5</button>
+          <button class="6-button">6</button>
           <button class="minus-button">-</button>
         </div>
 
         <div class="row">
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
+          <button class="1-button">1</button>
+          <button class="2-button">2</button>
+          <button class="3-button">3</button>
           <button class="mult-button">&#215</button>
         </div>
 
         <div class="row">
-          <button>0</button>
-          <button>.</button>
+          <button class="0-button">0</button>
+          <button class="dot-button">.</button>
           <button class="equal-button">=</button>
           
         </div>
